# yt-dlp-webui

./: .gitattributes  .gitignore  AGENTS.md  README.md  build_exe.bat  db_migrate.bat  pyproject.toml  run_backend.bat  run_frontend.bat  setup_dev.bat
.github/workflows/: release.yml
backend/ytdlp_webui/: __init__.py  app.py  launcher.py
backend/ytdlp_webui/api/: deps.py  files.py  health.py  jobs.py  settings.py  tools.py  websocket.py
backend/ytdlp_webui/core/: __init__.py  config_store.py  database.py  event_bus.py  logging.py  paths.py  schemas.py
backend/ytdlp_webui/desktop/: __init__.py  browser.py  tray.py
backend/ytdlp_webui/services/: autostart_service.py  file_service.py  process_output.py  process_runner.py  recorder_service.py  tool_service.py  ytdlp_command_builder.py  ytdlp_job_log.py  ytdlp_output.py
docs/: architecture.md  database.md  release.md
frontend/: package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.svelte  main.ts  style.css  vite-env.d.ts
frontend/src/api/: client.ts
frontend/src/components/channels/: ChannelList.svelte  ChannelRow.svelte
frontend/src/components/common/: ToolsModal.svelte
frontend/src/components/dashboard/: ChannelList.svelte  ChannelRow.svelte  Dashboard.svelte  JobItem.svelte  (+4 more)
frontend/src/i18n/: ko.ts
frontend/src/stores/: events.ts  theme.ts
frontend/src/types/: index.ts
frontend/src/utils/: format.ts  youtube.ts
scripts/: setup_alembic.py
tests/: test_command_builder.py  test_config_store.py  test_database.py  test_process_output.py  test_recorder_service.py
(+13 files in other folders)
