[project]
name = "yt-dlp-webui"
version = "0.1.0"
description = "Windows tray web UI for monitoring and recording YouTube live streams with yt-dlp."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "fastapi>=0.125.0",
  "pydantic>=2.12.0",
  "pydantic-settings>=2.12.0",
  "platformdirs>=4.5.0",
  "psutil>=7.1.0",
  "pillow>=12.0.0",
  "pystray>=0.19.5",
  "tomlkit>=0.13.3",
  "uvicorn[standard]>=0.38.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.0",
  "pytest>=9.0.0",
  "pytest-asyncio>=1.3.0",
  "ruff>=0.14.0",
]
build = [
  "pyinstaller>=6.17.0",
]

[project.scripts]
yt-dlp-webui = "ytdlp_webui.launcher:main"

[build-system]
requires = ["setuptools>=80.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["backend"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["backend"]
asyncio_mode = "auto"

